test/parser/while.dmz
// RUN: (dmz %s -ast-dump 2>&1 || true) | filecheck %s
fn main() -> void {
    // CHECK: [[# @LINE + 1 ]]:13: error: expected expression
    while (-) {}
    
    // CHECK: [[# @LINE + 1 ]]:15: error: expected expression
    while (1) ;

    const zero = 0;
    while (zero) {
        1;
    }
    // CHECK: DeclStmt
    // CHECK-NEXT:        VarDecl:const  zero
    // CHECK-NEXT:          IntLiteral '0'
    // CHECK-NEXT:      WhileStmt
    // CHECK-NEXT:        DeclRefExpr zero
    // CHECK-NEXT:        Block
    // CHECK-NEXT:          IntLiteral '1'
}
